@@ -1,5 +1,17 @@
 2018-01-25  Joseph Pecoraro  <pecoraro@apple.com>
 
+        Web Inspector: Network Table: Sort indicator is not displayed when sorted column is hidden and re-shown
+        https://bugs.webkit.org/show_bug.cgi?id=182164
+        <rdar://problem/36892619>
+
+        Reviewed by Brian Burg.
+
+        * UserInterface/Views/Table.js:
+        (WI.Table.prototype.showColumn):
+        Re-add the sort classes if the column being shown is the active sort column.
+
+2018-01-25  Joseph Pecoraro  <pecoraro@apple.com>
+
         Web Inspector: Network - Cookies view should behave better at narrow widths, all data is hidden
         https://bugs.webkit.org/show_bug.cgi?id=182163
         <rdar://problem/36893241>
